--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-redux": "^5.0.6",
