--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0",
+    "react-weather-display": "^1.0.1",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
